Fix content overflowing on mobile devices

--- a/style/main.css
+++ b/style/main.css
@@ -87,6 +87,8 @@ main{
     display: grid;
     grid-template-columns: 1fr min(1200px,100% )1fr;
     grid-auto-rows: min-content;
+    width: 100%;
+    overflow: hidden;
 }
 
 main > * {
@@ -111,6 +113,7 @@ main > * {
     align-items: center;
     justify-content: center;
 
+    padding-top: 100px;
     text-align: center;
 }
 
